fix homepage bottom spacing

--- a/site/src/components/DatasetPreview/styles.module.css
+++ b/site/src/components/DatasetPreview/styles.module.css
@@ -1,3 +1,7 @@
+.previewContainer {
+  margin-bottom: 50px;
+}
+
 .cardContainer {
   margin-bottom: 10px;
 }
